Correct box spacing

--- a/themes/colors/css/colors.css
+++ b/themes/colors/css/colors.css
@@ -998,7 +998,7 @@ a.icon-rarrow:hover {width:20px;height:20px;background-image:url(../images/rarro
 .icon-uarrow {width:20px;height:20px;background-image:url(../images/uarrow.png);}
 a.icon-uarrow:hover {width:20px;height:20px;background-image:url(../images/uarrow2.png);}
 .icon-udarrow {width:20px;height:20px;background-image:url(../images/udarrow.png);}
-.icon-user_add {width:32px;height:32px;background-image:url(../images/user_add.png);}
+.icon-user_add {width:25px;height:22px;background-image:url(../images/user_add.png);}
 .icon-warning {width:17px;height:17px;background-image:url(../images/warning.png);}
 .icon-webtrees {width:100px;height:21px;background-image:url(../images/webtrees.png);}
 .icon-wiki {width:16px;height:16px;background-image:url(../images/w_button.png);}
